{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 33,
  "lineage": "1fd6de35-4f74-67e1-a8a0-bb4e120a4eaf",
  "resources": [
    {
      "module": "module.ec2jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost",
      "mode": "data",
      "type": "aws_security_group",
      "name": "tier_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0881ee7e0049e3778",
            "description": "Allows all access to jumphost",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "vpc_sg"
                ]
              }
            ],
            "id": "sg-0881ee7e0049e3778",
            "name": "vpc_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-07e2dd62d48f0280d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.19.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/24"
                ]
              }
            ],
            "id": "subnet-07e2dd62d48f0280d",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-07e2dd62d48f0280d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.19.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/24"
                ]
              }
            ],
            "id": "subnet-07e2dd62d48f0280d",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost.module.ec2creation",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07dff0604f79fff43",
            "domain": "vpc",
            "id": "eipalloc-0b9e59898a9d89519",
            "instance": "i-000e547f800bb40f6",
            "network_interface": "eni-0dbc4dff5e4b39a76",
            "private_dns": "ip-172-19-0-83.us-east-2.compute.internal",
            "private_ip": "172.19.0.83",
            "public_dns": "ec2-3-17-230-0.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.230.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2jumphost.module.ec2creation.aws_instance.instance"
          ]
        }
      ]
    },
    {
      "module": "module.ec2jumphost.module.ec2creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-000e547f800bb40f6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000e547f800bb40f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbc4dff5e4b39a76",
            "private_dns": "ip-172-19-0-83.us-east-2.compute.internal",
            "private_ip": "172.19.0.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c644c924f69e8539",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e2dd62d48f0280d",
            "tags": {
              "Name": "jumphost00-wf1",
              "component": "jumphost",
              "env_subtype": "dev",
              "role": "jumphost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03872e0537d563141"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2jumphost.module.ec2creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-00507e5b0f9056400",
            "mac_address": "0a:aa:6f:cf:ba:72",
            "private_dns_name": "ip-172-19-0-51.us-east-2.compute.internal",
            "private_ip": "172.19.0.51",
            "private_ips": [
              "172.19.0.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03e66d5db5156560b",
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e2dd62d48f0280d",
            "tags": {
              "_ReservedDnsName": "jumphost00-wf1"
            }
          },
          "dependencies": [
            "aws_security_group.external_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-03e66d5db5156560b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e66d5db5156560b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              }
            ],
            "name": "external_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-07d91898200adc040",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d91898200adc040",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "internal_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    }
  ]
}